[package]
name = "pico-template"
version = "0.1.0"
edition = "2021"
default-run = "pico-template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
# stepgen = "0.1.3"
stepgen = { path = "../../stepgen" }
# stepper = { git = "https://github.com/hannobraun/stepper" }

[[bin]]
name = "bit_banged"
[[bin]]
name = "with_pio"
[[bin]]
name = "pio_dma_example"
