[package]
name = "pico-template"
version = "0.1.0"
edition = "2021"
default-run = "pico-template"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
# stepgen = "0.1.3"
stepgen = { path = "../../stepgen" }
# stepper = { git = "https://github.com/hannobraun/stepper" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[[bin]]
name = "bit_banged"
[[bin]]
name = "with_pio"
[[bin]]
name = "pio_dma_example"
[[bin]]
name = "blinky"
[[bin]]
name = "interrupts"
[[bin]]
name = "usb"
